# FastAPI-GenAI

./: main.py  pyproject.toml
