[tool.poetry]
name = "todosapp"
version = "0.1.0"
description = ""
authors = ["gulabahmad <gulabahmad724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
[tool.poetry.scripts]
dev = "todosapp.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
